--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "consoletvs/charts": "^6.8",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.3",
         "laravel/tinker": "^2.9",
